# msgpack-schema

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/workflows/: bump-major.yml  bump-minor.yml  bump-patch.yml  bump.bash  ci.yml  quickstart.yml
msgpack-schema-impl/: Cargo.toml
msgpack-schema-impl/src/: attr.rs  common.rs  deserialize.rs  lib.rs  serialize.rs
msgpack-value/: Cargo.toml
msgpack-value/src/: lib.rs
msgpack-value/tests/: tests.rs
proptest-regressions/: lib.txt
src/: format.rs  lib.rs  value.rs
tests/: test.proptest-regressions  test.rs  tests_1.rs
tests/ui/: attrs.rs  attrs.stderr  duplicate.rs  duplicate.stderr  field.rs  field.stderr  item.rs  item.stderr  tag.rs  tag.stderr  tag_uniqueness.rs  tag_uniqueness.stderr  unit.rs  unit.stderr  variant.rs  variant.stderr
