[workspace]
default-members = [".", "msgpack-schema-impl", "msgpack-value"]

[package]
name = "msgpack-schema"
version = "0.8.0"
authors = ["Yuichi Nishiwaki <yuichi.nishiwaki@icloud.com>"]
edition = "2021"
description = "A specification language for MessagePack data format"
license = "MIT"
repository = "https://github.com/Idein/msgpack-schema"
documentation = "https://docs.rs/msgpack-schema"
categories = ["encoding"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msgpack-schema-impl = { version = "=0.8.0", path = "./msgpack-schema-impl" }
msgpack-value = { version = "=0.8.0", path = "./msgpack-value" }
rmp = "0.8"
thiserror = "^1.0.25"
byteorder = "1"

[dev-dependencies]
trybuild = "1.0"
proptest = "1"
proptest-derive = "0.3"
