[package]
name = "msgpack-schema-impl"
version = "0.3.0"
authors = ["Yuichi Nishiwaki <yuichi.nishiwaki@icloud.com>"]
edition = "2018"
description = "Implementation detail of the msgpack-schema crate"
license = "MIT"
repository = "https://github.com/Idein/msgpack-schema"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
