[package]
name = "msgpack-value"
version = "0.5.0"
authors = ["Yuichi Nishiwaki <yuichi.nishiwaki@icloud.com>"]
edition = "2021"
description = "Types and macros for the MessagePack data model"
license = "MIT"
repository = "https://github.com/Idein/msgpack-schema"

[dependencies]
thiserror = "^1.0.25"
proptest = "1"
proptest-derive = "0.3"
