[package]
name = "msgpack-value"
version = "1.1.0"
authors = ["Yuichi Nishiwaki <yuichi.nishiwaki@icloud.com>"]
edition = "2021"
description = "Types and macros for the MessagePack data model"
license = "MIT"
repository = "https://github.com/Idein/msgpack-schema"

[features]
default = ["proptest"]
proptest = ["dep:proptest", "dep:proptest-derive"]

[dependencies]
thiserror = "^1.0.25"
proptest = { version = "1", optional = true }
proptest-derive = { version = "0.3", optional = true }
